--- a/strukt.html
+++ b/strukt.html
@@ -1,29 +1,34 @@
-<!--Registeirungsmaske  (Name; Auswahl aus 10 Charakteren) 
+<!-- Registrierungsmaske  (Name; Auswahl aus 10 Charakteren,"Weiter" Button) // Hier sollte man entweder einen "Mitspieler Bestätigen" Button einfügen oder zuvor eine Spieleranzahl abfrage tätigen LeifHeyne
 Tabelle 10x20 (Spielwelt; jeweils 8 Felder (2x4) fortlaufend beschriftet (Fortschritt Glatatica 1, Fortschritt Glatatica 2 ... bis 8);
 
 Teil der Tabelle:
 //////////////////////////////
-(- 1 Feld names Kobold, wenn nutzer dieses Feld aktiviert, Spiel wird beendet 
+(- 1 Feld names Kobold, wenn nutzer dieses Feld aktiviert, Spiel wird beendet  
 
 - 1x4 Felder: "Treibstoff, Moral, Bevölkerung, Nahrung" in denen ein Timer herunterzählt, wenn 0 dann spiel beenden;
 
-- 1 Feld zeigt Bild des ausgewählten Charakters, beim draufklicken erscheind ein Menü mit 3 Charakteriegenschaften)
+- 1 Feld zeigt Bild des ausgewählten Charakters, beim draufklicken erscheind ein Menü mit 3 Charakteriegenschaften und den Karten) // LeifHeyne
 
 - 1 Feld zeigt den dezeitigen Wert der Panzerung der Galactica an,der Wert wird aus der Datenbank geladen
--3 Felder, inden jeweils textfelder mit den Information der Politiker des Spiels angezeigt werden, diese können am Anfag des Spiels eingeben  oder aich aus einer Datenbank geladen werden
+-3 Felder, inden jeweils Textfelder mit den Information der Politiker des Spiels angezeigt werden, diese können am Anfag des Spiels eingeben  oder auch aus einer Datenbank geladen werden
 
- - Schaltfläche: für jeden Spieler einen, der mit der Betätigung das einde seines Zugs bestätigt
+ - Schaltfläche: für jeden Spieler einen um seinen Zug zu beenden
 
 6 Schaltflächen die bei anklicken ein Bild eiblenden(Raumschiffe)
 
 - unsichtbares Textfeld: nur sichtbares Textfeld für den jeweiligen Spieler 
 //////////////////////////////
 
-- Hintergrundbild: (semulation des Spielbretts durch ein Diashowbild) 
+- Hintergrundbild: (simulation des Spielbretts durch ein Bild/Video/Gif) // LeifHeyne
 
-- Datenbank: Jeder Charakterkarte bekommt über eine Datenabnk zugewiesen, indem Anzahl der Karten und     Fähigkeiten gespeichert werden  
+- Datenbank: In einer Datenbank werden die Fähigkeiten und Karten der einzelnen Charaktere gespeichert
 
 - Hintergrund Musik
 
-
  -->
+ 
+ === strukt LeifHeyne, 2016-04-22 ===
+ 
+Du hast ja schonmal eine Grundstruktur erarbeitet. Was ich noch hinzugefügt habe ist ein Element um die Anzahl der Spieler abzugreifen.
+Du könntest die Elemente noch mit Kommentaren versehen in denen Ihre Funktion erklaert wird.
+Das würde die Lesbarkeit und Verständlichkeit deutlich erhoehen und du koenntest wahrscheinlich auch besser damit arbeiten.
