--- a/strukt.html
+++ b/strukt.html
@@ -32,3 +32,33 @@ Teil der Tabelle:
 Du hast ja schonmal eine Grundstruktur erarbeitet. Was ich noch hinzugefügt habe ist ein Element um die Anzahl der Spieler abzugreifen.
 Du könntest die Elemente noch mit Kommentaren versehen in denen Ihre Funktion erklaert wird.
 Das würde die Lesbarkeit und Verständlichkeit deutlich erhoehen und du koenntest wahrscheinlich auch besser damit arbeiten.
+
+===================================
+=== Feedback Alpers, 2016-05-04 ===
+===================================
+
+Wie schon in Projektidee.txt beschrieben müssen Sie zuerst die Beschreibung für das Projekt erstellen.
+
+- Jetzt zum Feedback für Ihre strukturellen Elemente:
+
+(1) Die Aufgabe besteht darin, dass Sie jedes strukturelle Element bezeichnen und kurz notieren, wofür es da ist. Der Sinn besteht darin, dass Sie später aus den strukturellen Elementen Gruppen bilden werden. Momentan gibt es aber noch so gut wie keine Elemente und zum Teil sind die nicht klar differenziert. Hier ein Beispiel:
+<!-- Registrierungsmaske  (Name; Auswahl aus 10 Charakteren,"Weiter" Button) // Hier sollte man entweder einen "Mitspieler Bestätigen" Button einfügen oder zuvor eine Spieleranzahl abfrage tätigen LeifHeyne -->
+
+Das könnte z.B. so aussehen:
+Formular (Registrierung)
+- Textfeld (Username)
+- Menü/Radiobuttons (Charakterauswahl)
+- Schaltfläche (submit)
+
+(2) Eine Datenbank ist kein strukturelles Element.
+
+Wertung 3: Ausarbeitung der strukt. Elem.: gesamt: 1 / 10
+- Knappe Form: 1
+- Für je 5 unterschiedl. strukt. Elem (keine Gruppierungen): 0 
+- Vermischung strukt. Elem. und Gruppierung: 0
+
+Nachdem Sie die Spielbeschreibung ausgearbeitet haben, arbeiten Sie bitte die strukturellen Elemente aus und notieren Sie alle strukturellen Elemente so, dass Sie kurz notiert sind. Die Zusammenstellung zu Gruppen wird erst bei der nächsten Runde Ihre Aufgabe sein. Diese nächste Aufgabe gebe ich bei Ihnen vor allem deshalb nicht frei, weil Sie zurzeit noch keine eigentliche Beschreibung erstellt haben.
+
+=====================
+=== Feedback Ende ===
+=====================
